--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
     "react-router": "^7.6.0",
+    "shaka-player": "^4.14.12",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6"
   },
